# amplifier-app-cli

./: README.md  pyproject.toml
amplifier_app_cli/: agent_config.py  key_manager.py  main.py  paths.py  session_store.py
amplifier_app_cli/commands/: __init__.py  agents.py  collection.py  module.py  profile.py  run.py  session.py  tool.py  update.py
amplifier_app_cli/data/profiles/: __init__.py
amplifier_app_cli/utils/: display.py  module_cache.py  settings_manager.py  source_status.py  update_check.py  update_executor.py
docs/: AGENT_DELEGATION_IMPLEMENTATION.md  CONTEXT_LOADING.md  INTERACTIVE_MODE.md
docs/decisions/: ADR-0001-project-scoped-self-contained-sessions.md
tests/: test_mention_resolver_collections.py  test_repl_prompt.py  test_session_spawner.py
