[project]
name = "amplifier-app-cli"
version = "0.1.0"
description = "Reference CLI implementation for Amplifier AI development platform"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Microsoft MADE:Explorations Team" }]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "amplifier-core",
    "amplifier-config",
    "amplifier-collections",
    "amplifier-module-resolution",
    "amplifier-profiles",
    "pyyaml>=6.0.3",
    "prompt-toolkit>=3.0.52",
    "httpx[socks]>=0.28.1",
]

[project.scripts]
amplifier = "amplifier_app_cli.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_app_cli"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-asyncio>=0.24.0"]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-config = { git = "https://github.com/microsoft/amplifier-config", branch = "main" }
amplifier-module-resolution = { git = "https://github.com/microsoft/amplifier-module-resolution", branch = "main" }
amplifier-collections = { git = "https://github.com/microsoft/amplifier-collections", branch = "main" }
amplifier-profiles = { git = "https://github.com/momuno/amplifier-profiles", branch = "dev/fix-agent-exclude" }
